# SimpleCompiler

./: .gitignore  CMakeLists.txt  PrefixHeader.pch  README.md  SimpleCompilerConfig.h.in  Vagrantfile
include/: SimpleCompilerConfig.h
src/: Debug.hpp  Instructions.cpp  Instructions.hpp  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.hpp  StateMachine.cpp  StateMachine.hpp  Symbol.cpp  Symbol.hpp  Token.cpp  Token.hpp  main.cpp
src/Enums/: CharacterTypes.hpp  MachineCodes.hpp  MachineStates.hpp  TokenTypes.hpp
tests/: InstructionsTests.cpp  NodeTests.cpp  ParserTests.cpp  ScannerTests.cpp  StateMachineTests.cpp  SymbolTests.cpp  TokenTests.cpp
tests/Fixtures/: test_code.c  test_code_1.c  test_code_2.c  test_code_midterm1.c  test_code_midterm2.c  test_input.c
tests/Mocks/: MockParser.hpp  MockScanner.hpp  MockStateMachine.hpp  MockSymbolTable.hpp  MockToken.hpp
